# ascii-trace

./: Cargo.toml
src/: intersect.rs  main.rs  material.rs  matrixes.rs  scene.rs
src/renderables/: mod.rs  plane.rs  sphere.rs
